Fix font issue on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -352,7 +352,7 @@ user-select: none;
   @media only screen and (max-width: 1000px) {
 
     #first-div{
-      background-image: url("http://i.imgur.com/Bljwfxa.png");
+      background-image: url("http://i.imgur.com/BMp11mA.png");
       background-size: 300% !important;
       height: 50em;
     }
